--- a/index.html
+++ b/index.html
@@ -1,28 +1,42 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8" />  
-    <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
-    <meta content="author" name="Mahmut_Furkan"/>
-    <meta name="description" content="The purpose of this web site is just self-education.İf you have any issues about this web page or anything else,please don't bother me for this.I don't have to fix your problem." />
-    <link rel="stylesheet" href="css\main.css"/>
-    <link rel="icon" type="image/x-icon" href="img\favicon.ico" />
-    <title>Sadet bizimle gelir</title>
-  </head>
-  <body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="Author" content="Aceful">
+    <style>
+body{
   
-    <header>
-      <ul class="nav_bar">
-        <li ><a href="#" style="color:red; margin-left:40px;">İnternet</a></li>
-        <li class="two_li"><a href="#" style="color:navy"> Oyun </a></li>
-        <li class="three_li"><a href="#" style="color:orange"> Eğlence </a></li>
-        <li class="four_li"><a href="#" style="color:aquamarine"> Eğitim </a></li>
-        <li class="five_li"><a href="#" style="color:green">  Davranış</a></li>
-        <li class="six_li"><a href="#" style="color:#c49f08"> Programcılık</a> </li>
-        <li class="seven_li"><a href="#" style="color:magenta"> Teknoloji</a> </li>
-      </ul>
-    </header>
-    <nav>
-    </nav>
-  </body>
+    text-align: center;
+
+}
+ol{
+    list-style-position: inside;
+}
+li{
+    margin-right: 2rem;
+}
+h2{
+    margin-top: 1.5em;
+}
+    </style>
+    <title>Document</title>
+</head>
+<body>
+    <!-- Hakkımda kısmı başlangıcı-->
+<h1>Mahmut Furkan Alkandağı</h1>
+<h2>Hakkımda</h2>
+<p>Merhaba ben Mahmut Furkan Alkandağı nam-ı diğer 'Aceful'. Oyunlarda genellikle bu nick'i kullanırım ve bazen yazdığım kodları bu isimle imzalarım. Öncedende dediğim gibi oyun oynamaya bayılırım. Yazılımcılığa ilgi duymam oyunlarla başladı diyebilirim. En sevdiğim oyun 'PORTAL 2' dir ve daha bir benzeri gelmemiştir beklenmektedir. Bellimi olur belki bir sonrakinde bende görev alırım :)</p>
+
+<h2>Sevdiğim Oyunlar</h2>
+<ol>
+    <li>Portal Serisi</li>
+    <li>Red Dead Redemption 2</li>
+    <li> GTA V</li>
+    <li>Disonored</li>
+    <li>Half-life serisi</li>
+</ol>
+    <!-- Hakkımda kısmı bitiş-->
+</body>
 </html>
