index ödev güncellemesi

--- a/index.html
+++ b/index.html
@@ -1,42 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Author" content="Aceful">
     <style>
-body{
-  
-    text-align: center;
+        body {
 
-}
-ol{
-    list-style-position: inside;
-}
-li{
-    margin-right: 2rem;
-}
-h2{
-    margin-top: 1.5em;
-}
+
+            background-image: linear-gradient(to left, rgb(245, 245, 248), rgb(148, 148, 155));
+
+        }
+
+        ul {
+            list-style-position: inside;
+
+        }
+
+        ol {
+            list-style-position: inside;
+
+        }
+
+        li {
+            margin-right: 2rem;
+        }
+
+        #neresi {
+
+            color: red;
+        }
+
+        h2 {
+            margin-top: 1.5em;
+        }
+
+        #sub_Text {
+            margin-left: 10em;
+        }
     </style>
     <title>Document</title>
 </head>
+
 <body>
     <!-- Hakkımda kısmı başlangıcı-->
-<h1>Mahmut Furkan Alkandağı</h1>
-<h2>Hakkımda</h2>
-<p>Merhaba ben Mahmut Furkan Alkandağı nam-ı diğer 'Aceful'. Oyunlarda genellikle bu nick'i kullanırım ve bazen yazdığım kodları bu isimle imzalarım. Öncedende dediğim gibi oyun oynamaya bayılırım. Yazılımcılığa ilgi duymam oyunlarla başladı diyebilirim. En sevdiğim oyun 'PORTAL 2' dir ve daha bir benzeri gelmemiştir beklenmektedir. Bellimi olur belki bir sonrakinde bende görev alırım :)</p>
+    <h1>Mahmut Furkan Alkandağı</h1>
+    <h2>Hakkımda</h2>
+    <p>
+        Merhaba ben Mahmut Furkan Alkandağı nam-ı diğer 'Aceful'. Oyunlarda genellikle bu nick'i kullanırım ve bazen
+        yazdığım kodları bu isimle imzalarım. Öncedende dediğim gibi oyun oynamaya bayılırım. Yazılımcılığa ilgi duymam
+        oyunlarla başladı diyebilirim. En sevdiğim oyun 'PORTAL 2' dir ve daha bir benzeri gelmemiştir beklenmektedir.
+        Bellimi olur belki bir sonrakinde bende görev alırım :)
+    </p>
+    <h2>İlgi alanlarım</h2>
+    <img src="https://wallpapercave.com/dwp1x/wp2374520.jpg" border="5px" alt="Picture of Glados"
+        title="Cake is a Lie!">
+    <p id="sub_Text">
+        En başarılı bulduğum oyun karakterlerinden biri olan GLaDOS
+    </p>
+    <ol>
+        <li>Oyun
+            <ul>
+                <li>Portal Serisi</li>
+                <li>Red Dead Redemption 2</li>
+                <li>Disonored</li>
+                <li>Half-life serisi</li>
+                <li> GTA V</li>
+            </ul>
+        </li>
+        <li>Dizi
+            <ul>
+                <li>Rick and Morty</li>
+                <li>Blackmirror</li>
+                <li title="Gına geldi evet ama bence güzel diziydi">Squid game</li>
+                <li title="Old but Gold">Ekmek Teknesi</li>
+            </ul>
+        </li>
+        <li>Film
+            <ul>
+                <li title="Beyin hücrelerinizle dans eden nadide bir yapım">İnception</li>
+                <li title="Bu yukardakinden daha beter ama sürükleyici">Prestige</li>
+                <li title="Fazla söze gerek yok">Matrix serisi</li>
+                <li title="Her yiğidin harcı değil bu filmi anlamak">Memento</li>
+                <li title="Stephen King'in nadide yapıtından">1408</li>
+            </ul>
+        </li>
+        <li>Kitap
+            <ul>
+                <li>İnsan Ne İle Yaşar</li>
+                <li>Dijital Kale</li>
+                <li>Karamazov Kardeşler</li>
+                <li>Puslu Kıtalar Atlası</li>
+                <li>Sizin Memlekette Hiç Eşek Yokmu</li>
+            </ul>
+        </li>
+    </ol>
 
-<h2>Sevdiğim Oyunlar</h2>
-<ol>
-    <li>Portal Serisi</li>
-    <li>Red Dead Redemption 2</li>
-    <li> GTA V</li>
-    <li>Disonored</li>
-    <li>Half-life serisi</li>
-</ol>
     <!-- Hakkımda kısmı bitiş-->
 </body>
+
 </html>
